<resources>
    <string name="app_name">PlaceBook</string>
    <string name="title_activity_maps">Map</string>
    <string name="bookmark_image">Bookmark image</string>
    <string name="name_label">Name</string>
    <string name="label_notes">Notes</string>
    <string name="hint_notes">Enter Notes</string>
    <string name="label_phone">Phone</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_name">Enter Name</string>
    <string name="label_address">Address</string>
    <string name="save_button">Save</string>
    <string name="raywenderlich_com">raywenderlich.com</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="option_camera">Camera</string>
    <string name="option_gallery">Gallery</string>
    <string name="photo_dialog_title">Photo Option</string>
    <string name="option_cancel">Cancel</string>
    <string name="category_label">Category</string>
    <string name="delete_button">Delete</string>
    <string name="confirm_delete">Delete?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
