<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:adjustViewBounds="true"
                android:maxHeight="300dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/default_photo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewName"
                    style="@style/BookmarkLabel"
                    android:text="@string/name_label" />

                <EditText
                    android:id="@+id/editTextName"
                    style="@style/BookmarkEditText"
                    android:hint="@string/hint_name"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCategory"
                    style="@style/BookmarkLabel"
                    android:layout_weight="0.4"
                    android:text="@string/category_label" />

                <ImageView
                    android:id="@+id/imageViewCategory"
                    android:src="@drawable/ic_other"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="bottom"
                    android:layout_width="24dp"
                    android:layout_height="24dp"/>

                <Spinner
                    android:id="@+id/spinnerCategory"
                    android:layout_weight="1.4"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNotes"
                    style="@style/BookmarkLabel"
                    android:text="@string/label_notes" />

                <EditText
                    android:id="@+id/editTextNotes"
                    style="@style/BookmarkEditText"
                    android:hint="@string/hint_notes"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPhone"
                    style="@style/BookmarkLabel"
                    android:text="@string/label_phone" />

                <EditText
                    android:id="@+id/editTextPhone"
                    style="@style/BookmarkEditText"
                    android:hint="@string/hint_phone"
                    android:inputType="phone" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAddress"
                    style="@style/BookmarkLabel"
                    android:text="@string/label_address" />

                <EditText
                    android:id="@+id/editTextAddress"
                    style="@style/BookmarkEditText"
                    android:hint="@string/label_address"
                    android:inputType="textMultiLine" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
